<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/secondary_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/drawer_header_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/text_size_title_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nav_header_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_caption" />

</LinearLayout>
